2009-06-05  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.hpp
	(SharkTopLevelBlock::do_full_instance_check): Add class argument.
	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.cpp
	(SharkTopLevelBlock::do_instance_check): Removed constant pool check.
	(SharkTopLevelBlock::do_full_instance_check): Removed constant
	pool lookup.

2009-06-05  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.cpp
	(SharkTopLevelBlock::acquire_method_lock): Removed constant
	pool lookup.

2009-06-05  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.cpp
	(SharkTopLevelBlock::do_new): Removed constant pool lookup.
	(SharkTopLevelBlock::scan_for_traps): Add traps for new.

2009-06-04  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkBlock.hpp
	(SharkBlock::lookup_for_field_access): Removed.
	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp
	(SharkBlock::do_field_access): Inline receiver for static fields.
	(SharkBlock::lookup_for_field_access): Removed.

	* ports/hotspot/src/share/vm/shark/sharkInliner.cpp
	(SharkInlinerHelper::do_field_access): Allow static fields.

	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.hpp
	(SharkBlock::lookup_for_field_access): Removed.
	* ports/hotspot/src/share/vm/shark/sharkTopLevelBlock.cpp
	(SharkTopLevelBlock::scan_for_traps): Removed static field traps.
	(SharkBlock::lookup_for_field_access): Removed.

2009-06-04  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkConstant.hpp: New file.
	* ports/hotspot/src/share/vm/shark/sharkConstant.cpp: Likewise.

	* ports/hotspot/src/share/vm/shark/sharkBlock.hpp
	(SharkBlock::lookup_for_ldc): Removed.
	(SharkBlock::do_ldc): Likewise.
	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp
	(SharkBlock::parse_bytecode): Use new code for ldc and friends.
	(SharkBlock::do_field_access): Use new code for constant fields.